--- a/categories.html
+++ b/categories.html
@@ -64,7 +64,7 @@
               <a href="https://linkedin.com/in/jannikschilling/" class="d-inline-block p-3"><span class="icon-linkedin"></span></a>
               <a href="https://www.xing.com/profile/Jannik_Schilling7/" class="d-inline-block p-3"><span class="icon-xing"></span></a>
             </div>
-            <form data-netlify="true" action="#" class="search-form d-inline-block">
+            <form action="#" class="search-form d-inline-block">
 
               <div class="d-flex">
                 <input type="email" class="form-control" placeholder="Search...">
@@ -101,7 +101,7 @@
                   <a href="politik.html" class="nav-link text-left">Politik</a>
                 </li>
                 <li>
-                  <a href="business.html" class="nav-link text-left">Unternehmen</a>
+                  <a href="business.html" class="nav-link text-left">Geschäftliches</a>
                 </li>
 
                 <li><a href="contact.html" class="nav-link text-left">Kontakt</a></li>
@@ -287,7 +287,7 @@
             </div>
             
             <p>
-              <a href="#" class="more">See All Popular <span class="icon-keyboard_arrow_right"></span></a>
+              <a href="#" class="more">Mehr beliebte Artikel <span class="icon-keyboard_arrow_right"></span></a>
             </p>
           </div>
         </div>
