--- a/about.html
+++ b/about.html
@@ -162,6 +162,9 @@
         <div class="row">
           <div class="col-12">
             <div class="copyright">
+              <p>
+                <a href="impressum.html">Impressum</a> <p></p> <a href="datenschutz.html">Datenschutzerklärung</a>
+              </p>
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
