Fixed minor errors

--- a/network.html
+++ b/network.html
@@ -318,7 +318,7 @@
             </div>
       
       <p>
-        <a href="#" class="more">Mehr beliebte Artikel <span class="icon-keyboard_arrow_right"></span></a>
+        <a href="politik.html" class="more">Mehr beliebte Artikel <span class="icon-keyboard_arrow_right"></span></a>
       </p>
     </div>
 
