--- a/blog-single.html
+++ b/blog-single.html
@@ -151,7 +151,7 @@
 
 
             <div class="pt-5">
-                    <p>Categories:  <a href="#">Design</a>, <a href="#">Events</a>  Tags: <a href="#">#html</a>, <a href="#">#trends</a></p>
+                    <p>Kategorien:  <a href="#">Design</a>, <a href="#">Events</a>  Tags: <a href="#">#html</a>, <a href="#">#trends</a></p>
                   </div>
       
       
