--- a/categories.html
+++ b/categories.html
@@ -123,7 +123,7 @@
         <div class="row">
           <div class="col-lg-9">
             <div class="section-title">
-              <span class="caption d-block small">Categories</span>
+              <span class="caption d-block small">Kategorien</span>
               <h2>Politics</h2>
             </div>
             <div class="post-entry-2 d-flex">
