--- a/totschlag.html
+++ b/totschlag.html
@@ -242,7 +242,7 @@
           
 
           <div class="pt-5">
-                  <p>Categories:  <a href="#">Design</a>, <a href="#">Events</a>  Tags: <a href="#">#html</a>, <a href="#">#trends</a></p>
+                  <p>Kategorien:  <a href="#">Design</a>, <a href="#">Events</a>  Tags: <a href="#">#html</a>, <a href="#">#trends</a></p>
           </div>
 
           <div id="disqus_thread"></div>
