--- a/network.html
+++ b/network.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Jannik Schilling &mdash; Website Template by Colorlib</title>
+  <title>Jannik Schilling</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -135,12 +135,12 @@
                 <img src="images/jannik_about.jpg" alt="Image" class="img-fluidid">
               </div>
               <div class="vcard">
-                <span class="d-block"><a href="#">Jannik Schilling</a> in <a href="#">Gesundheit</a></span>
+                <span class="d-block"><a href="#">Jannik Schilling</a> in <a href="business.htmls">Geschäftliches</a></span>
                 <span class="date-read">02. April 2020<span class="mx-1">&bullet;</span> Lesezeit: 3 Minuten <span class="icon-star2"></span></span>
               </div>
             </div>
           
-          <p class="drop-cap">
+          <p class="lead drop-cap">
               Wie werde ich erfolgreich? Diese Frage wird sich wohl jeder von uns mindestens einmal in seinem Leben stellen. Networking ist dabei wohl einer der wichtigsten Bauteile des Fundaments für eine steile Karriere! In diesem Beitrag lernen Sie, wie Sie in fünf einfachen Schritten ein großartiges Netzwerk aufbauen können, das Ihnen bei der Suche nach einem Job, bei der Suche nach Kunden und beim Karriereaufstieg helfen wird!   
           </p>
 
