--- a/totschlag.html
+++ b/totschlag.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Jannik Schilling &mdash; Website Template by Colorlib</title>
+  <title>Jannik Schilling</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -135,13 +135,13 @@
                 <img src="images/jannik_about.jpg" alt="Image" class="img-fluidid">
               </div>
               <div class="vcard">
-                <span class="d-block"><a href="#">Jannik Schilling</a> in <a href="#">Gesundheit</a></span>
-                <span class="date-read">02. April 2020<span class="mx-1">&bullet;</span> Lesezeit: 3 Minuten <span class="icon-star2"></span></span>
+                <span class="d-block"><a href="#">Jannik Schilling</a> in <a href="business.html">Geschäftliches</a></span>
+                <span class="date-read">02. April 2020<span class="mx-1">&bullet;</span> Lesezeit: 5 Minuten <span class="icon-star2"></span></span>
               </div>
             </div>
 
           
-          <p class="drop-cap">
+          <p class="lead drop-cap">
           Sie alle kennen sicher die folgende Situation: Bei einer Konferenz, Diskussion oder einem Gespräch haben Sie Ihren Standpunkt aus Ihrer Sicht ideal vorgetragen: Sie haben sinnvolle Argumente benutzt, Sie haben logisch argumentiert und Sie haben Kontraargumente entkräftet. Doch dann: Das Totschlagargument: "Das funktioniert doch eh nicht!", "Das ist sicherlich viel zu teuer!" oder "Von dir hat doch noch nie ein Projekt geklappt!".
           </p>
           <p>
