Added about me on start page

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                   <a href="politik.html" class="nav-link text-left">Politik</a>
                 </li>
                 <li>
+                  <a href="wirtschaft.html" class="nav-link text-left">Wirtschaft</a>
+                </li>
+                <li>
                   <a href="business.html" class="nav-link text-left">Geschäftliches</a>
                 </li>
 
@@ -232,6 +235,22 @@
     <div class="site-section">
       <div class="container">
         <div class="row">
+          <div class="col-lg-6 pl-md-5">
+            <div class="section-title">
+              <h2>Über mich</h2>
+            </div>
+            <p>Schule und Uni gleichzeitig? Das geht doch gar nicht?!</p>
+            <p>Doch, wie ich als Juniorstudent an der Universität Hamburg erfahren habe.</p>
+            
+            <p>Ich bin ein engagierter und interessiert Student und bin immer auf der Suche nach neuen Erfahrungen und neuen Herausforderungen. </p>
+            
+            <p>Ich stehe neuen und außergewöhnlichen Ideen stets offen gegenüber und zeichne mich durch ein hohes Selbstbewusstsein aus. Außerdem setze ich mich für Gerechtigkeit und Fairness ein.</p>
+            <ul class="ul-check list-unstyled success mt-5">
+              <li>Seit fünf Jahren nehme ich mit dem Robotik-Team unserer Schule bei dem Wettbewerb First-Lego-League (FLL) mit hervorragenden Ergebnissen teil. Ich habe selbstständig und mit viel Verantwortung die komplette Programmierung übernommen und leite neue Mitglieder an.</li>
+              <li>Seit April 2018 bin ich "Juniorstudent" an der Universität Hamburg. Seitdem ich mit 13 Jahren angefangen habe studiere ich mittlerweile im fünften Semester Physik und habe mehrere Prüfungen erfolgreich abgelegt: Physik 1-3 Theo-Physik I+II, Astronomie I.</li>
+              <li>In November 2019 wurde ich vom Hamburger Abendblatt als Jugendreporter in der Kategorie "Klima" als einer von sechs Preisträgern für das vergangene Jahr ausgezeichnet.</li>
+            </ul>
+          </div>
           <div class="col-lg-6">
             <div class="section-title">
               <h2>Beliebte Artikel</h2>
