--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <div class="row align-items-center">
           <div class="col-12 col-lg-6 d-flex">
             <a href="index.html" class="site-logo">
-              Jannik Schilling
+              <img href="index.html" src="Logo.png" width=100%>
             </a>
 
             <a href="#" class="ml-auto d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black"><span
-                class="icon-menu h3"></span></a>
+              class="icon-menu h3"></span></a>
                 
           </div>
           <div class="col-12 col-lg-6 ml-auto d-flex">
