Changed logo width

--- a/politik.html
+++ b/politik.html
@@ -60,7 +60,7 @@
         <div class="row align-items-center">
           <div class="col-12 col-lg-6 d-flex">
             <a href="index.html" class="site-logo">
-              <img href="index.html" src="Logo.png" width=90%>
+              <img href="index.html" src="Logo.png" width=100%>
             </a>
 
             <a href="#" class="ml-auto d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black"><span
@@ -149,7 +149,7 @@
               </div>
             </div>
             <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('images/airplane.jp2')"></div>
+              <div class="thumbnail" style="background-image: url('images/puffins.jpg')"></div>
               <div class="contents">
                 <h2><a href="klima-disco.html">Voll und Heiß: Klingt nach Disko, ist aber unsere Erde!</a></h2>
                 <p class="mb-3">Der Klimawandel ist eine Herausforderung für die Spezies Mensch. Unsere Welt hat so viele schöne Orte, die wir unbedingt erhalten müssen.</p>
