--- a/klima-disco.html
+++ b/klima-disco.html
@@ -60,7 +60,7 @@
         <div class="row align-items-center">
           <div class="col-12 col-lg-6 d-flex">
             <a href="index.html" class="site-logo">
-              <img href="index.html" src="Logo.png" width=90%>
+              <img href="index.html" src="Logo.png" width=100%>
             </a>
 
             <a href="#" class="ml-auto d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black"><span
@@ -136,7 +136,7 @@
           <div class="col-lg-8 single-content">
             
             <p class="mb-5">
-              <img src="images/airplane.jp2" alt="Image" class="img-fluid">
+              <img src="images/puffins.jpg" alt="Image" class="img-fluid">
             </p>  
             <h1 class="mb-4">
               Voll und heiß: Klingt nach Disco, ist aber unsere Erde!
