--- a/klima-disco.html
+++ b/klima-disco.html
@@ -28,11 +28,11 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
@@ -136,7 +136,7 @@
           <div class="col-lg-8 single-content">
             
             <p class="mb-5">
-              <img src="images/puffins.jpg" alt="Image" class="img-fluid">
+              <img src="images/earth.jpg" alt="Image" class="img-fluid">
             </p>  
             <h1 class="mb-4">
               Voll und heiß: Klingt nach Disco, ist aber unsere Erde!
