--- a/politik.html
+++ b/politik.html
@@ -28,11 +28,11 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
@@ -149,7 +149,7 @@
               </div>
             </div>
             <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('images/puffins.jpg')"></div>
+              <div class="thumbnail" style="background-image: url('images/earth.jpg')"></div>
               <div class="contents">
                 <h2><a href="klima-disco.html">Voll und Heiß: Klingt nach Disko, ist aber unsere Erde!</a></h2>
                 <p class="mb-3">Der Klimawandel ist eine Herausforderung für die Spezies Mensch. Unsere Welt hat so viele schöne Orte, die wir unbedingt erhalten müssen.</p>
