Added hero image

--- a/index.html
+++ b/index.html
@@ -128,8 +128,17 @@
     
     </div>
 
+    <div class="hero-image">
+      <div class="container-hero">
+        <h1><span>Jannik Schilling</span></h1>
+        <span class="phys">Juniorstudent Physik</span>
+        <a class="btn-me" href="about.html">Über mich</a>
+      </div>
+    </div>
 
     <div class="site-section py-0">
+
+
       <div class="owl-carousel hero-slide owl-style">
 
         <div class="site-section">
