Major Design changes

--- a/index.html
+++ b/index.html
@@ -120,12 +120,26 @@
     </div>
 
 
-    <header>
-      
+  <header>
+
+    <div class="site-section">
+      <div class="container">
+        <div class="half-post-entry d-block d-lg-flex bg-light">
+          <div class="img-bg" style="background-image: url('tafel.jpg')"></div>
+          <div class="contents">
+            <h2><a href="about.html">Wer ist Jannik Schilling?</a></h2>
+            <p>Schule und Uni gleichzeitig? Das geht doch gar nicht?!</p>
+            <p>Doch, wie ich als Juniorstudent an der Universität Hamburg erfahren habe.</p>
+            <p>Ich bin ein engagierter und interessiert Student und bin immer auf der Suche nach neuen Erfahrungen und neuen Herausforderungen. </p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
     </header>
 
     <div class="site-section py-0">
-
 
       <div class="owl-carousel hero-slide owl-style">
 
@@ -180,8 +194,9 @@
             <div class="section-title">
               <h2>Politik</h2>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('posts/SARS-CoV-2.png')"></div>
+
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('posts/SARS-CoV-2.png')"></div>
               <div class="contents">
                 <h2><a href="covid19-epidemie.html">Wie COVID-19 enden wird.</a></h2>
                 <p class="mb-3">Als sich die Meldungen über eine neue Krankheit im Januar häuften, haben viele COVID-19 unterschätzt. Doch nach dem Shutdown kennen wir die Gefahr und müssen uns fragen: Wann verschwindet Corona endlich?</p>
@@ -191,8 +206,8 @@
                 </div>
               </div>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('posts/recession-title.jpg')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('posts/recession-title.jpg')"></div>
               <div class="contents">
                 <h2><a href="covid19-wirtschaft.html">Schlimmste Wirtschaftskrise seit 100 Jahren?! Eine Bilanz</a></h2>
                 <p class="mb-3">Der Shutdown in Deutschland dauert nun schon vier Wochen an. Und schon jetzt deutet sich an: Deutschland rutscht in eine starke Rezession. Doch wie schlimm wird diese wirklich? Wer ist besonders betroffen und wann erholt sie sich wieder?</p>
@@ -207,8 +222,8 @@
             <div class="section-title">
               <h2>Geschäftlich</h2>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('images/net.jpg')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('images/net.jpg')"></div>
               <div class="contents">
                 <h2><a href="network.html">Netzwerken in fünf Schritten</a></h2>
                 <p class="mb-3">Wie werde ich erfolgreich? Networking ist wohl eine der wichtigsten Zutaten für Ihre steile Karriere! In diesem Beitrag lernen Sie, wie Sie ein großartiges Netzwerk aufbauen können, das Ihnen bei der Jobsuche, bei der Kundensuche und beim Karriereaufstieg helfen wird!</p>
@@ -218,8 +233,8 @@
                 </div>
               </div>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('posts/argument-title.jpg')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('posts/argument-title.jpg')"></div>
               <div class="contents">
                 <h2><a href="totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
                 <p class="mb-3">Sie alle kennen sicher die folgende Situation: Bei einer Diskussion haben Sie Ihren Standpunkt aus Ihrer Sicht ideal vorgetragen: Sie haben sinnvolle Argumente benutzt, Sie haben logisch argumentiert und Sie haben Kontraargumente entkräftet. Doch dann: Das Totschlagargument: "Das funktioniert doch eh nicht!". Wie damit umgehen?</p>
@@ -273,6 +288,8 @@
               <li>In November 2019 wurde ich vom Hamburger Abendblatt als Jugendreporter in der Kategorie "Klima" als einer von sechs Preisträgern für das vergangene Jahr ausgezeichnet.</li>
             </ul>
           </div>
+
+          <!--
           <div class="col-lg-6">
             <div class="section-title">
               <h2>Beliebte Artikel</h2>
@@ -329,7 +346,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="site-section subscribe bg-light">
       <div class="container">
