Minor Newsletter change+

--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
           </div>
         </div>
 
-        <div data-netlify="true" class="footer-right">
+        <div class="footer-right">
             <h2>Newsletter abonnieren</h2>
             <p>Sie möchten weiterhin tiefgehende politische Analysen, unternehmerische Artikel und ökonomische News erhalten? Dann abonnieren Sie doch gerne meinen Newsletter!</p>
-            <form class="newsletter-form">
+            <form  data-netlify="true" class="newsletter-form">
               <input type="text" id="mail" class="txtb" placeholder="E-Mail eingeben" value="">
               <input type="submit" id="submit" class="btn-sub">
             </form>
