--- a/business.html
+++ b/business.html
@@ -136,8 +136,8 @@
               <span class="caption d-block small">Kategorie</span>
               <h2>Geschäftliches</h2>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('posts/network.jpg')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('posts/network.jpg')"></div>
               <div class="contents">
                 <h2><a href="network.html">Netzwerken in fünf Schritten</a></h2>
                 <p class="mb-3">Wie werde ich erfolgreich? Diese Frage wird sich wohl jeder von uns mindestens einmal in seinem Leben stellen. Networking ist dabei wohl einer der wichtigsten Bauteile des Fundaments für eine steile Karriere! In diesem Beitrag lernen Sie, wie Sie in fünf einfachen Schritten ein großartiges Netzwerk aufbauen können, das Ihnen bei der Suche nach einem Job, bei der Suche nach Kunden und beim Karriereaufstieg helfen wird!</p>
@@ -147,8 +147,8 @@
                 </div>
               </div>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('posts/argument.jpg')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('posts/argument.jpg')"></div>
               <div class="contents">
                 <h2><a href="totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
                 <p class="mb-3">Sie alle kennen sicher die folgende Situation: Bei einer Konferenz, Diskussion oder einem Gespräch haben Sie Ihren Standpunkt aus Ihrer Sicht ideal vorgetragen: Sie haben sinnvolle Argumente benutzt, Sie haben logisch argumentiert und Sie haben Kontraargumente entkräftet. Doch dann: Das Totschlagargument: "Das funktioniert doch eh nicht!", "Das ist sicherlich viel zu teuer!" oder "Von dir hat doch noch nie ein Projekt geklappt!".</p>
