--- a/politik.html
+++ b/politik.html
@@ -138,8 +138,8 @@
               <span class="caption d-block small">Kategorie</span>
               <h2>Politik</h2>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('posts/SARS-CoV-2.png')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('posts/SARS-CoV-2.png')"></div>
               <div class="contents">
                 <h2><a href="covid19-epidemie.html">Wie COVID-19 enden wird.</a></h2>
                 <p class="mb-3">Die Welt als Ganzes steht vor einer Herausforderung, wie sie es seit dem zweiten Weltkrieg nicht mehr gegeben hat. Als sich die Meldungen im Januar über eine neue Krankheit häuften, haben die meisten Europäer diese Nachrichten aus China ignoriert. Viele waren damals der Meinung das Covid-19 (die von Sars-CoV-2 ausgelöste Krankheit) nicht schlimmer sei als eine gewöhnliche Grippewelle.</p>
@@ -149,8 +149,8 @@
                 </div>
               </div>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('images/earth.jpg')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('images/earth.jpg')"></div>
               <div class="contents">
                 <h2><a href="klima-disco.html">Voll und Heiß: Klingt nach Disko, ist aber unsere Erde!</a></h2>
                 <p class="mb-3">Der Klimawandel ist eine Herausforderung für die Spezies Mensch. Unsere Welt hat so viele schöne Orte, die wir unbedingt erhalten müssen.</p>
