--- a/wirtschaft.html
+++ b/wirtschaft.html
@@ -138,8 +138,8 @@
               <span class="caption d-block small">Kategorie</span>
               <h2>Wirtschat</h2>
             </div>
-            <div class="post-entry-2 d-flex">
-              <div class="thumbnail" style="background-image: url('posts/recession.jpg')"></div>
+            <div class="half-post-entry d-block d-lg-flex bg-light">
+              <div class="img-bg" style="background-image: url('posts/recession.jpg')"></div>
               <div class="contents">
                 <h2><a href="covid19-wirtschaft.html">Schlimmste Wirtschaftskrise seit 100 Jahren?! Eine Bilanz</a></h2>
                 <p class="mb-3">Der Shutdown in Deutschland dauert nun schon vier Wochen an. Und schon jetzt deutet sich an: Deutschland rutscht in eine starke Rezession. Doch wie schlimm wird diese wirklich?</p>
