--- a/about.html
+++ b/about.html
@@ -134,6 +134,11 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-left">
+            <div class="hero-image">
+              <div class="hero-text">
+                Über mich
+              </div>
+            </div>
             <div class="section-title mb-5">
               <h2>Über mich</h2>
             </div>
@@ -179,9 +184,27 @@
             <a href="impressum.html">Impressum</a>
             |
             <a href="datenschutz.html">Datenschutz</a>
+            |
+            <a href="">Sitemap</a>
           </p>
+          <!-- <h5 style="color: #282828;">Beliebte Artikel</h5> -->
+
+           <!-- <div class="trend-entry d-flex">
+            <div class="number align-self-start">01</div>
+            <div class="trend-contents">
+              <h2><a class="aboutlink" href="network.html">Netzwerken in fünf Schritten</a></h2>
+            </div>
+          </div>
+
+          <div class="trend-entry d-flex">
+            <div class="number align-self-start">02</div>
+            <div class="trend-contents">
+              <h2><a class="aboutlink" href="totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
+            </div>
+          </div> -->
 
           <p class="footer-company-name"> &copy;<script>document.write(new Date().getFullYear());</script> Jannik Schilling | All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+  
         </div>
 
         <div class="footer-center">
@@ -200,13 +223,11 @@
             document.write(a);
             </script>-jähriger "Junior-Student" im Fachbereich Physik an der Uni Hamburg. In interessiere ich mich für Politik, Geschichte, Philosophie, klassische Herrenmode und Wirtschaft. In meiner Freizeit spiele ich Schlagzeuge, tanze und programmiere gerne.</p>
 
-          
+          <!--
           <div>
             <p><i class="fas fa-map-marker"></i>
-            Espluguesring 23,
-              22926 Ahrensburg</p>
+            Schleswig-Holstein</p>
           </div>
-
           <div>
             <p><i class="fa fa-phone"></i>
             <a href="tel:015233765747">+49 1523 3765747</a></p>
@@ -214,25 +235,29 @@
           <div>
             <p><i class="fas fa-envelope"></i>
             <a href="mailto:Jannik@Schilling.land">Jannik@Schilling.land</a></p>
-          </div>
+          </div>-->
 
           <div class="social-media">
             <a href="https://www.linkedin.com/in/jannik-schilling/"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://www.xing.com/profile/Jannik_Schilling7/"><i class="fab fa-xing"></i></a>
+            <a href="mailto:Jannik@Schilling.land"><i class="fas fa-envelope"></i></a>
+            <a href="tel:015233765747"><i class="fa fa-phone"></i></a>
+            <a href="contact.html"><i class="fa fa-comment"></i></a>
           </div>
         </div>
 
         <div class="footer-right">
             <h2>Newsletter abonnieren</h2>
             <p>Sie möchten weiterhin tiefgehende politische Analysen, unternehmerische Artikel und ökonomische News erhalten? Dann abonnieren Sie doch gerne meinen Newsletter!</p>
-            <form class="newsletter-form">
+            <form  data-netlify="true" class="d-flex">
               <input type="text" id="mail" class="txtb" placeholder="E-Mail eingeben" value="">
-              <input type="submit" id="submit" class="btn-sub">
+              <button type="submit" class="btn btn-secondary" ><span class="icon-paper-plane"></span></button>
+              <!--<input type="submit" id="submit" class="btn-sub">-->
             </form>
         </div>
       </div>
     </div>
-  </footer>    
+  </footer>  
 
   </div>
   <!-- .site-wrap -->
