added success message

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
               <a href="https://linkedin.com/in/jannikschilling/" class="d-inline-block p-3"><span class="icon-linkedin"></span></a>
               <a href="https://www.xing.com/profile/Jannik_Schilling7/" class="d-inline-block p-3"><span class="icon-xing"></span></a>
             </div>
-            <!---<form action="#" class="search-form d-inline-block">
+            <!---<form action="/success.html" class="search-form d-inline-block">
 
               <div class="d-flex">
                 <input type="email" class="form-control" placeholder="Search...">
