Added Orwell Article

--- a/about.html
+++ b/about.html
@@ -151,12 +151,24 @@
             </p>
           </div>
           <div class="col-lg-6 pl-md-5">
-            <p>Schule und Uni gleichzeitig? Das geht doch gar nicht?!</p>
-            <p>Doch, wie ich als Juniorstudent an der Universität Hamburg erfahren habe.</p>
-            
+            <p>Hallo, mein Name ist Jannik Schilling. Ich bin ein <script>
+              var date=new Date();
+              var y = date.getFullYear();
+              var m = date.getMonth();
+              var d = date.getDate();
+              var a = 0;
+              if (m>=7 && d>=17) {
+                a=y-2004
+              }else {
+                a=y-2004-1
+              }
+            document.write(a);
+            </script>-jähriger "Junior-Student" im Fachbereich Physik an der Uni Hamburg. In interessiere ich mich für Politik, Geschichte, Philosophie, klassische Herrenmode und Wirtschaft. In meiner Freizeit spiele ich Schlagzeuge, tanze und programmiere gerne.</p>
+
             <p>Ich bin ein engagierter und interessiert Student und bin immer auf der Suche nach neuen Erfahrungen und neuen Herausforderungen. </p>
             
             <p>Ich stehe neuen und außergewöhnlichen Ideen stets offen gegenüber und zeichne mich durch ein hohes Selbstbewusstsein aus. Außerdem setze ich mich für Gerechtigkeit und Fairness ein.</p>
+            <h3 style="color: #282828;">Meilensteine</h3>
             <ul class="ul-check list-unstyled success mt-5">
               <li>Seit fünf Jahren nehme ich mit dem Robotik-Team unserer Schule bei dem Wettbewerb First-Lego-League (FLL) mit hervorragenden Ergebnissen teil. Ich habe selbstständig und mit viel Verantwortung die komplette Programmierung übernommen und leite neue Mitglieder an.</li>
               <li>Seit April 2018 bin ich "Juniorstudent" an der Universität Hamburg. Seitdem ich mit 13 Jahren angefangen habe studiere ich mittlerweile im fünften Semester Physik und habe mehrere Prüfungen erfolgreich abgelegt: Physik 1-3 Theo-Physik I+II, Astronomie I.</li>
