--- a/wirtschaft.html
+++ b/wirtschaft.html
@@ -150,7 +150,7 @@
               </div>
             </div>
             <div class="half-post-entry d-block d-lg-flex bg-light">
-              <div class="img-bg" style="background-image: url('posts/recession.jpg')"></div>
+              <div class="img-bg" style="background-image: url('images/financial-crisis.jpg')"></div>
               <div class="contents">
                 <h2><a class="aboutlink" href="covid19-wirtschaft.html">Schlimmste Wirtschaftskrise seit 100 Jahren?! Eine Bilanz</a></h2>
                 <p class="mb-3">Der Shutdown in Deutschland dauert nun schon vier Wochen an. Und schon jetzt deutet sich an: Deutschland rutscht in eine starke Rezession. Doch wie schlimm wird diese wirklich?</p>
