--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               </div>
             </div>
             <div class="half-post-entry d-block d-lg-flex bg-light">
-              <div class="img-bg" style="background-image: url('posts/recession-title.jpg')"></div>
+              <div class="img-bg" style="background-image: url('images/financial-crisis.jpg')"></div>
               <div class="contents">
                 <h2><a class="aboutlink" href="covid19-wirtschaft.html">Schlimmste Wirtschaftskrise seit 100 Jahren?! Eine Bilanz</a></h2>
                 <p class="mb-3">Der Shutdown in Deutschland dauert nun schon vier Wochen an. Und schon jetzt deutet sich an: Deutschland rutscht in eine starke Rezession. Doch wie schlimm wird diese wirklich? Wer ist besonders betroffen und wann erholt sie sich wieder?</p>
