--- a/rezo-video.html
+++ b/rezo-video.html
@@ -73,7 +73,7 @@
               <a href="https://linkedin.com/in/jannikschilling/" class="d-inline-block p-3"><span class="icon-linkedin"></span></a>
               <a href="https://www.xing.com/profile/Jannik_Schilling7/" class="d-inline-block p-3"><span class="icon-xing"></span></a>
             </div>
-            <!---<form action="/success.html" class="search-form d-inline-block">
+            <!---<form action="success.html" class="search-form d-inline-block">
 
               <div class="d-flex">
                 <input type="email" class="form-control" placeholder="Search...">
@@ -286,7 +286,7 @@
 
     <div class="site-section subscribe bg-light">
       <div class="container">
-        <form data-netlify="true" action="/success.html" class="row align-items-center">
+        <form data-netlify="true" action="success.html" class="row align-items-center">
           <div class="col-md-5 mr-auto">
             <h2>Abonniere meinen Newsletter</h2>
             <p>Du möchtest weiterhin tiefgehende politische Analysen, unternehmerische Artikel und ökonomische News erhalten? Dann abonniere doch gerne meinen Newsletter!</p>
