--- a/success.html
+++ b/success.html
@@ -196,7 +196,7 @@
 
     <div class="site-section subscribe bg-light">
       <div class="container">
-        <form data-netlify="true" method="POST" action="/success.html" class="row align-items-center" novalidate="false">
+        <form data-netlify="true" method="POST" action="success.html" class="row align-items-center" novalidate="false">
           <div class="col-md-5 mr-auto">
             <h2>Abonniere meinen Newsletter</h2>
             <p>Die wollen weiterhin tiefgehende politische Analysen, unternehmerische Artikel und ökonomische News erhalten? Dann abonnieren Sie doch gerne meinen Newsletter!</p>
