--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section-title">
-              <h2><a href="politik.html">Politik</a></h2>
+              <h2><a class="sec-tit" href="politik.html">Politik</a></h2>
             </div>
 
             <div class="half-post-entry d-block d-lg-flex bg-light">
@@ -226,7 +226,7 @@
             </div>
 
             <div class="section-title">
-              <h2><a href="wirtschaft.html">Wirtschaft</a></h2>
+              <h2><a class="sec-tit" href="wirtschaft.html">Wirtschaft</a></h2>
             </div>
             <div class="half-post-entry d-block d-lg-flex bg-light">
               <div class="img-bg" style="background-image: url('images/financial-crisis.jpg')"></div>
@@ -253,7 +253,7 @@
               </div>
             </div>
             <div class="section-title">
-              <h2 class="tit"><a href="politik.html">Geschäftlich</a></h2>
+              <h2 class="tit"><a class="sec-tit" href="business.html">Geschäftlich</a></h2>
             </div>
             <div class="half-post-entry d-block d-lg-flex bg-light">
               <div class="img-bg" style="background-image: url('posts/argument-title.jpg')"></div>
