Fixed footer in Impressum, Datenschutz

--- a/success.html
+++ b/success.html
@@ -127,7 +127,7 @@
         <div class="half-post-entry d-block d-lg-flex bg-light">
           <div class="img-bg" style="background-image: url('tafel.jpg')"></div>
           <div class="contents">
-            <h2><a href="about.html" class="aboutlink">Ich habe Ihre Anmeldung erhalten! Vielen Dank!</a></h2>
+            <h2><a href="about.html" class="aboutlink">Ich habe Ihre Nachricht/Anmeldung erhalten! Vielen Dank!</a></h2>
           </div>
         </div>
       </div>
