--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <title>Jannik Schilling</title>
@@ -258,14 +258,13 @@
           </div>
         </div>
 
-        <div class="footer-right">
+                <div class="footer-right">
             <h2>Newsletter abonnieren</h2>
-            <p>Sie möchten weiterhin tiefgehende politische Analysen, unternehmerische Artikel und ökonomische News erhalten? Dann abonnieren Sie doch gerne meinen Newsletter!</p>
+            <!--<p>Sie möchten weiterhin tiefgehende politische Analysen, unternehmerische Artikel und ökonomische News erhalten? Dann abonnieren Sie doch gerne meinen Newsletter!</p>
             <form  data-netlify="true" class="d-flex">
               <input type="text" id="mail" class="txtb" placeholder="E-Mail eingeben" value="">
               <button type="submit" class="btn btn-secondary" ><span class="icon-paper-plane"></span></button>
-              <!--<input type="submit" id="submit" class="btn-sub">-->
-            </form>
+            </form>-->
         </div>
       </div>
     </div>
