--- a/about.html
+++ b/about.html
@@ -144,6 +144,7 @@
             </div>
           </div>
         </div>
+        
         <div class="row">
           <div class="col-lg-6">
             <p>
@@ -178,6 +179,35 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="site-section">
+      <div class="site-section">
+        <div class="middle">
+          <div class="counting-sec">
+            <div class="inner-width">
+              <div class="col">
+                <i class="fas fa-briefcase"></i>
+                <div class="num">1</div>
+                Praktikum
+              </div>
+              <div class="col">
+                <i class="fas fa-birthday-cake"></i>
+                <div class="num">15</div>
+                Jahre alt
+              </div>
+              <div class="col">
+                <i class="fab fa-linkedin-in"></i>
+                <div class="num">1500</div>
+                LinkedIn Kontakte
+              </div>
+            </div>
+          </div>
+        </div>
+    
+        <script type="text/javascript">
+          $(".num").counterUp({delay:10,time:1000});
+        </script>
     </div>
 
 
