--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         </div>
       </div>
     </div>
+  </header>
     
     <div class="site-section">
       <div class="middle">
@@ -186,18 +187,27 @@
       </script>
     </div>
 
+
+  <div class="site-section">
+    <h2 style="color: #282828; padding-left: 5%; margin-top: -50px; margin-bottom: 20px;">Referenzen</h2>
+
     <div class="testimonial-container">
-      <p>Test Testimonial</p>
-      <div class="client">
-        <img src="jannik_about.jpg">
+      <div class="test-quote">
+        <i class="fas fa-quote-right"></i>
+      </div>
+        <p>Die an Ihn gestellten Aufgaben löste er stets gewissenhaft, engagiert und zu meiner vollsten Zufriedenheit.
+        Während seiner Beschäftigung habe ich Jannik als eigenständigen, verlässlichen und wissbegierigen Mitarbeiter zu schätzen gelernt. (...)</p>
+        <p>Die notwendigen fachlichen Kompetenzen erwarb Jannik während seines Juniorstudiums an der Uni Hamburg, welches Jannik im Sommersemester 2018 begann und bis zum heutigen Zeitpunkt (Sommer-/Wintersemester 2019/20) fortsetzt. Diese Kenntnisse halfen Ihm bei der Erfüllung der an Ihn gestellten Aufgaben während der Ausübung seiner Arbeit.</p>
+        <div class="client">
+          <img src="images/banerjee.jpg">
         <div>
-          <span class="test-name">Jannik</span>
-          <span class="test-job">Student</span>
+          <span class="test-name">Prof. Robi Banerjee</span>
+          <span class="test-job">Physik-Professor, Universität Hamburg</span>
         </div>
       </div>
     </div>
+  </div>
 
-    </header>
 
     <div class="site-section py-0">
       <h1 style="color: #282828; padding-left: 5%; margin-top: -50px; margin-bottom: -20px;">Blog</h1>
