Added Blenk Reference

--- a/index.html
+++ b/index.html
@@ -206,7 +206,28 @@
         </div>
       </div>
     </div>
+
+    <div class="testimonial-container">
+      <div class="test-quote">
+        <i class="fas fa-quote-right"></i>
+      </div>
+      <p>Jannik wurde vom Hamburger Abendblatts mit einem Artikel über den Klimawandel ausgezeichnet.
+      Ihm gelang es in seinem Artikel auf außergewöhnlicher Weise, ein kompliziertes Thema mit einfachen Beispielen zu erklären. Außerdem schaffte es Jannik, durch eine Mischung aus privaten Erlebnissen und Alltagsbeispielen einen Handlungsstrang zu erzeugen, die Jannik am Schluss zu einer Erkenntnis zusammenführt, die zum Nachdenken anregt.</p>
+      
+      <p>Jannik ist ein sehr wissbegieriger und sorgfältiger Schüler, der sich schnell für ein neues Thema begeistern lässt und neuen Herausforderungen mit Freude und Engagement begegnet. Auch in Stresssituationen blieb Jannik stets gelassen und schaffte es stets eine gute Lösung für alle Beteiligten zu finden.</p>
+      
+        <div class="client">
+          <img src="images/blenk.jpg">
+        <div>
+          <span class="test-name">Heike Blenk</span>
+          <span class="test-job">Oberstudienrätin, Emil-von-Behring Gymnasium</span>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+
+
 
 
     <div class="site-section py-0">
