--- a/datenschutz.html
+++ b/datenschutz.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-  <link href="https://fonts.googleapis.com/css?family=B612+Mono|Cabin:400,700&display=swap" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -135,7 +135,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 single-content">
-            <h1 class="mb-4">
+            <h1 class="article-head">
               Datenschutzerklärung
             </h1>
 
@@ -523,7 +523,8 @@
 
     
     <footer>
-      <div class="footer-container">
+      <hr style="height:1px;border-width:0;color:#282828;background-color:#282828">
+    <div class="footer-container">
         <div class="row">
           <div class="footer-left">
             <img src="Logo.png" class="logo">
