--- a/orwell-1984.html
+++ b/orwell-1984.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-  <link href="https://fonts.googleapis.com/css?family=B612+Mono|Cabin:400,700&display=swap" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -139,7 +139,7 @@
             <p class="mb-5">
               <img src="posts/orwell-1984.png" alt="Image" class="img-fluid">
             </p>  
-            <h1 class="mb-4">
+            <h1 class="article-head">
               "1984": Erschreckend Realistisch!
             </h1>
             <div class="post-meta d-flex mb-5">
@@ -262,6 +262,7 @@
 
     
   <footer>
+    <hr style="height:1px;border-width:0;color:#282828;background-color:#282828">
     <div class="footer-container">
       <div class="row">
         <div class="footer-left">
