--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                   <a href="about.html" class="nav-link text-left">Über mich</a>
                 </li>
                 <li>
+                  <a href="blog.html" class="nav-link text-left">Blog</a>
+                </li>
+                <li>
                   <a href="politik.html" class="nav-link text-left">Politik</a>
                 </li>
                 <li>
@@ -111,15 +114,11 @@
                 <li><a href="contact.html" class="nav-link text-left">Kontakt</a></li>
               </ul>                                                                                                                                                                                                                                                                                         
             </nav>
-
           </div>
-         
         </div>
       </div>
-
     </div>
-    
-    </div>
+  </div>
 
 
   <header>
@@ -159,7 +158,7 @@
   </header>
 
 
-    <div class="site-section">
+    <div class="site-section slide-in">
       <div class="middle">
         <div class="counting-sec">
           <div class="inner-width">
@@ -183,7 +182,7 @@
       </div>
   
       <script type="text/javascript">
-        $(".num").counterUp({delay:10,time:1000});
+        $(".num").counterUp({delay:10,time:1500});
       </script>
     </div>
 
@@ -191,7 +190,7 @@
   <div class="site-section">
     <h2 style="color: #282828; padding-left: 5%; margin-top: -50px; margin-bottom: 20px;">Referenzen</h2>
 
-    <div class="testimonial-container">
+    <div class="testimonial-container slide-in">
       <div class="test-quote">
         <i class="fas fa-quote-right"></i>
       </div>
@@ -209,7 +208,7 @@
       </div>
     </div>
 
-    <div class="testimonial-container">
+    <div class="testimonial-container slide-in">
       <div class="test-quote">
         <i class="fas fa-quote-right"></i>
       </div>
@@ -230,12 +229,11 @@
 </div>
 
 <div class="py-0">
-  <h1 class="blog-head">Blog</h1>
-  <div class="container">
+  <div class="container>
     <div class="section-title">
-      <h2><a class="sec-tit" href="stilvolle-kleidung.html">Neuester Artikel</a></h2>
+      <h2 class="tit"><a class="sec-tit" href="blog.html">Blog</a></h2>
     </div>
-    <div class="half-post-entry d-block d-lg-flex bg-light">
+    <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
       <div class="img-bg" style="background-image: url('images/business-suit.jpg')"></div>
       <div class="contents">
         <span class="caption">Neuster Artikel</span>
@@ -256,10 +254,10 @@
     <div class="site-section py-0">
       <div class="container">
         <div class="section-title" style="margin-bottom: -40px;">
-          <h2>Ausgewählte Artikel</h2>
+          <h3 class="tit"><a class="sec-tit" href="#">Ausgewählte Artikel</a></h3>
         </div>
       </div>
-      <div class="owl-carousel hero-slide owl-style">
+      <div class="owl-carousel hero-slide owl-style slide-in">
         <div class="site-section">
           <div class="container">
             <div class="half-post-entry d-block d-lg-flex bg-light">
@@ -309,10 +307,10 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section-title">
-              <h2><a class="sec-tit" href="politik.html">Politik</a></h2>
+              <h3 class="tit"><a class="sec-tit" href="politik.html">Politik</a></h3>
             </div>
 
-            <div class="half-post-entry d-block d-lg-flex bg-light">
+            <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
               <div class="img-bg" style="background-image: url('images/rezo-org.jpg')"></div>
               <div class="contents">
                 <h2><a class="aboutlink" href="rezo-video.html">Weißt Du Noch...? Das Rezo-Video</a></h2>
@@ -330,9 +328,9 @@
             <br><br>
 
             <div class="section-title">
-              <h2><a class="sec-tit" href="wirtschaft.html">Wirtschaft</a></h2>
+              <h3 class="tit"><a class="sec-tit" href="wirtschaft.html">Wirtschaft</a></h3>
             </div>
-            <div class="half-post-entry d-block d-lg-flex bg-light">
+            <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
               <div class="img-bg" style="background-image: url('images/financial-crisis.jpg')"></div>
               <div class="contents">
                 <h2><a class="aboutlink" href="covid19-wirtschaft.html">Schlimmste Wirtschaftskrise seit 100 Jahren?! Eine Bilanz</a></h2>
@@ -345,7 +343,7 @@
             </div>
           </div>
           <div class="col-lg-12">
-            <div class="half-post-entry d-block d-lg-flex bg-light">
+            <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
               <div class="img-bg" style="background-image: url('images/windrad.jpg')"></div>
               <div class="contents">
                 <h2><a class="aboutlink" href="windkraft.html">Windkraft: Kommt bald die Flaute?</a></h2>
@@ -361,9 +359,9 @@
             <br><br>
 
             <div class="section-title">
-              <h2 class="tit"><a class="sec-tit" href="business.html">Geschäftlich</a></h2>
+              <h3 class="tit"><a class="sec-tit" href="business.html">Geschäftlich</a></h3>
             </div>
-            <div class="half-post-entry d-block d-lg-flex bg-light">
+            <div class="half-post-entry d-block d-lg-flex bg-light slide-in">
               <div class="img-bg" style="background-image: url('posts/argument-title.jpg')"></div>
               <div class="contents">
                 <h2><a class="aboutlink" href="totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
@@ -461,7 +459,7 @@
 
 
   <footer>
-    <hr style="height:1px;border-width:0;color:#282828;background-color:#282828">
+
     <div class="footer-container" style="margin-top: 30px;">
       <div class="row">
         <div class="footer-left">
@@ -568,6 +566,8 @@
   <script src="js/jquery.mb.YTPlayer.min.js"></script>
 
   <script src="js/main.js"></script>
+
+  <script src="js/fade.js"></script>
 
   <script>
     function BlenkTest() {
