--- a/contact.html
+++ b/contact.html
@@ -209,14 +209,14 @@
            <!-- <div class="trend-entry d-flex">
             <div class="number align-self-start">01</div>
             <div class="trend-contents">
-              <h2><a class="aboutlink" href="network.html">Netzwerken in fünf Schritten</a></h2>
+              <h2><a class="aboutlink" href="article/network.html">Netzwerken in fünf Schritten</a></h2>
             </div>
           </div>
 
           <div class="trend-entry d-flex">
             <div class="number align-self-start">02</div>
             <div class="trend-contents">
-              <h2><a class="aboutlink" href="totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
+              <h2><a class="aboutlink" href="article/totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
             </div>
           </div> -->
 
@@ -301,6 +301,7 @@
 
 
   <script src="js/main.js"></script>
+  <script src="js/fade.js"></script>
 
 </body>
 
