--- a/about.html
+++ b/about.html
@@ -155,10 +155,10 @@
         <div class="row">
           <div class="col-lg-6">
             <p>
-              <img src="images/jannik_about.jpg" alt="Image" class="img-fluid">
+              <img src="images/jannik_about.jpg" alt="Image" class="img-fluid slide-in">
             </p>
           </div>
-          <div class="col-lg-6 pl-md-5">
+          <div class="col-lg-6 pl-md-5 slide-in">
             <p>Hallo, mein Name ist Jannik Schilling. Ich bin ein <script>
               var date=new Date();
               var y = date.getFullYear();
@@ -176,8 +176,8 @@
             <p>Ich bin ein engagierter und interessiert Student und bin immer auf der Suche nach neuen Erfahrungen und neuen Herausforderungen. </p>
             
             <p>Ich stehe neuen und außergewöhnlichen Ideen stets offen gegenüber und zeichne mich durch ein hohes Selbstbewusstsein aus. Außerdem setze ich mich für Gerechtigkeit und Fairness ein.</p>
-            <h3 style="color: #282828;">Meilensteine</h3>
-            <ul class="ul-check list-unstyled success mt-5">
+            <h3 class="slide-in" style="color: #282828;">Meilensteine</h3>
+            <ul class="ul-check list-unstyled success mt-5 slide-in">
               <li>Seit fünf Jahren nehme ich mit dem Robotik-Team unserer Schule bei dem Wettbewerb First-Lego-League (FLL) mit hervorragenden Ergebnissen teil. Ich habe selbstständig und mit viel Verantwortung die komplette Programmierung übernommen und leite neue Mitglieder an.</li>
               <li>Seit April 2018 bin ich "Juniorstudent" an der Universität Hamburg. Seitdem ich mit 13 Jahren angefangen habe studiere ich mittlerweile im fünften Semester Physik und habe mehrere Prüfungen erfolgreich abgelegt: Physik 1-3 Theo-Physik I+II, Astronomie I.</li>
               <li>In November 2019 wurde ich vom Hamburger Abendblatt als Jugendreporter in der Kategorie "Klima" als einer von sechs Preisträgern für das vergangene Jahr ausgezeichnet.</li>
@@ -188,34 +188,33 @@
       </div>
     </div>
 
-    <div class="site-section">
-      <div class="site-section">
-        <div class="middle">
-          <div class="counting-sec">
-            <div class="inner-width">
-              <div class="col">
-                <i class="fas fa-briefcase"></i>
-                <div class="num">1</div>
-                Praktikum
-              </div>
-              <div class="col">
-                <i class="fas fa-birthday-cake"></i>
-                <div class="num">15</div>
-                Jahre alt
-              </div>
-              <div class="col">
-                <i class="fab fa-linkedin-in"></i>
-                <div class="num">1500</div>
-                LinkedIn Kontakte
-              </div>
+    <div class="site-section slide-in">
+      <div class="middle">
+        <div class="counting-sec">
+          <div class="inner-width">
+            <div class="col">
+              <i class="fas fa-briefcase"></i>
+              <div class="num">1</div>
+              Praktikum
+            </div>
+            <div class="col">
+              <i class="fas fa-birthday-cake"></i>
+              <div class="num">15</div>
+              Jahre alt
+            </div>
+            <div class="col">
+              <i class="fab fa-linkedin-in"></i>
+              <div class="num">1500</div>
+              LinkedIn Kontakte
             </div>
           </div>
         </div>
-    
-        <script type="text/javascript">
-          $(".num").counterUp({delay:10,time:1000});
-        </script>
-    </div>
+      </div>
+  
+      <script type="text/javascript">
+        $(".num").counterUp({delay:10,time:1000});
+      </script>
+  </div>
 
 
     <!-- END section -->
@@ -242,14 +241,14 @@
            <!-- <div class="trend-entry d-flex">
             <div class="number align-self-start">01</div>
             <div class="trend-contents">
-              <h2><a class="aboutlink" href="network.html">Netzwerken in fünf Schritten</a></h2>
+              <h2><a class="aboutlink" href="article/network.html">Netzwerken in fünf Schritten</a></h2>
             </div>
           </div>
 
           <div class="trend-entry d-flex">
             <div class="number align-self-start">02</div>
             <div class="trend-contents">
-              <h2><a class="aboutlink" href="totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
+              <h2><a class="aboutlink" href="article/totschlag.html">So kontern Sie jedes Totschlagargument</a></h2>
             </div>
           </div> -->
 
@@ -334,6 +333,7 @@
 
 
   <script src="js/main.js"></script>
+  <script src="js/fade.js"></script>
 
 </body>
 
